src/assets/css/global.css
/*------------Font style----------------*/
@import url('https://fonts.googleapis.com/css?family=Cinzel|Comfortaa|Dancing+Script&display=swap&subset=cyrillic');
@import url('https://fonts.googleapis.com/css?family=Courgette|Tangerine&display=swap&subset=cyrillic');
@import url('https://fonts.googleapis.com/css?family=M+PLUS+1p|Quicksand:400,500&display=swap&subset=latin-ext');
@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap&subset=latin-ext');
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap&subset=cyrillic');
@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i&display=swap&subset=cyrillic');
.title_font{
 font-family: 'Comfortaa', cursive;

}
.title_crilic{
  font-size: 15.5px;
  font-weight: 400;
  line-height:24px;
  font-family: 'Roboto', Tahoma;
}
.title_crilic_big{
  font-family: 'El Messiri', sans-serif;
  font-size: 1.5rem; 

}

.title_beauty{
  font-family: 'Cinzel', serif;
  color:#141d27
}
.title_dance{
font-family: 'Tangerine', cursive;
font-size: 2rem;

}
.title_dance_big{
  font-family: 'Tangerine', cursive;
  font-size: 3rem;
  
  }
.title_playball{

  font-family: 'Quicksand', sans-serif;
  font-weight: 200;
  letter-spacing: 1px;
  font-size: 1.2rem;

}
.title_mplus{
  font-family: 'M PLUS 1p', sans-serif;
}
.new_times{
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.3em;
  font-weight: 300;
  line-height: 1.4em;
  font-style: italic;
  color:rgba(97, 96, 96, 0.993);
}
.new_times_des{
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.5em;
  font-weight: 300;
  letter-spacing: 1px;
  line-height: 1.4em;
  font-style: italic;
  color:rgba(77, 77, 77, 0.993);
}
.title_popins{
  font-family: 'Poppins', sans-serif;
  font-size: 2rem;
}
/*--- space middle ---*/
.space_middle{
  padding-top: 50px;
padding-bottom: 50px;
}
.v-card--reveal {
  align-items: center;
  bottom: 0;
  justify-content: center;
  opacity: .5;
  position: absolute;
  width: 100%;
}
.instagram{
  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
   
  -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}
/*------------Events----------------*/
.zooming{
  transition: transform .3s;
}
.zooming:hover{
  transform: scale(1.1);
}
.clickable{
    cursor: pointer;
}

  
 /*-----backgrounds----------*/

 .service{
  background-image: url('../img/service_test.jpg');
  background-size:cover;
 }
 .tile_title:hover{
  color:rgb(109, 5, 5);
    }
 /*-------------animations--------------*/
 

